Adjusted line spacing between project and creator info & recoded footer (but still need to solve problem of footer appearing too close to content in emptier pages

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -197,7 +197,7 @@ label {
   align-items: center;
   color: $middle-grey;
   line-height: 2em;
-  margin-bottom: 4em;
+  //margin-bottom: 4em;
   h3 {
     line-height: 1.5em;
     margin-right: 1em;
@@ -207,6 +207,11 @@ label {
     height: 50px;
     width: 50px;
   }
+}
+
+.project-creator-spacing {
+  margin-top: 0.3em;
+  margin-bottom: 2.5em;
 }
 
 .project-single-view-header {
@@ -360,7 +365,7 @@ label {
   text-align: center;
 }
 
-textarea {
+.textarea {
   width: 294px;
 }
 
@@ -486,11 +491,37 @@ textarea {
 }
 
 .footer-notes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+  margin-bottom: 0;
+  font-size: 1em;
+}
+
+/*.footer-notes {
+  //display: flex;
+  //flex-direction: center;
+  //position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  //flex-grow: 1;
+  //align-items: flex-end;
+  width: 100%;
+  padding-top: 20px;
+  font-size: 1em;
+  bottom: 0;
+  text-align: left;
+  // margin-top: 100px;
+}*/
+
+/*.footer-notes {
   display: block;
   position: fixed;
   padding-top: 20px;
   text-align: center;
-}
+}*/
 
 .steps {
   font-size: 2em;
